* fix content align of flexiconbutton

--- a/css/flexiconbutton.css
+++ b/css/flexiconbutton.css
@@ -26,7 +26,6 @@
 
 .as-flexicon-button-content {
     display: table-row;
-    height: 2em;
 }
 
 
